--- a/cloudformation-ec2.yaml
+++ b/cloudformation-ec2.yaml
@@ -412,3 +412,8 @@ Outputs:
     Value: !GetAtt 
       - EC2Instance
       - PublicIp
+  PrivateIP:
+    Description: Private IP address of the newly created EC2 instance
+    Value: !GetAtt 
+      - EC2Instance
+      - PrivateIp
