--- a/ec2.yml
+++ b/ec2.yml
@@ -33,17 +33,22 @@ Resources:
     Type: 'AWS::EC2::Instance'
     Properties: 
       
-      ImageId: !Ref ImageID
-      InstanceType: !Ref InstanceType
-      KeyName: !Ref KeyName
-      IamInstanceProfile: !Ref IAM
+      ImageId: 
+        Ref: ImageID
+      InstanceType: 
+        Ref: InstanceType
+      KeyName: 
+        Ref: KeyName
+      IamInstanceProfile: 
+        Ref: IAM
       SecurityGroupIds: 
-        - !Ref SecurityGroup
+        Ref: SecurityGroup
       AssociatePublicIpAddress: false
       DeleteOnTermination: true
-      SubnetId: !Ref SubnetId
+      SubnetId: 
+        Ref: SubnetId
       UserData:
-        Fn::Base64: !Sub |
+        Fn::Base64: |
             #!/bin/bash
             sudo apt update
             sudo apt upgrade -y
